--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<p> Minha gatinha minha vida, meu chuchu da minha marmita</p>
 		<p> Meu coração por ti bate, como caroço de abacate </p>
 
-		<img src="imagem.jpg.jpeg" width="500" height="700" /> 
+		<img src="imagem.jpeg" width="500" height="700" /> 
 
 	</body>	
 
