--- a/index.html
+++ b/index.html
@@ -12,7 +12,9 @@
 
 		<img src="imagem.jpeg" width="500" height="700" /> 
 
+		<h6>Não fique brava, foi com muito amor! S2 S2</h6>
 	</body>	
+
 
 
 
