--- a/index.html
+++ b/index.html
@@ -4,17 +4,19 @@
 	<head>
 		<title>Para a gatinha do meu coração</title>
 		<meta charset="utf-8" />
+		<link href="css/style.css" rel="stylesheet" /> 
 	</head>
+		<h1>Em memórias de um grande amor.</h1>
+	
 	<body>
-		<h1> Gatinha linda do meu coração </h1>
-		<p> Minha gatinha minha vida, meu chuchu da minha marmita</p>
-		<p> Meu coração por ti bate, como caroço de abacate </p>
+		<img src="imagem 1.jpg" width="1000" height="700" <br />
+		<img src="imagem 2.jpg" width="1000" height="700" <br />
+		<img src="imagem 3.jpg" width="1000" height="700" <br />
+		<img src="imagem 4.jpg" width="1000" height="700" <br />
+		
 
-		<img src="imagem.jpeg" width="500" height="700" /> 
 
-		<h6>Não fique brava, foi com muito amor! S2 S2</h6>
 	</body>	
-
 
 
 
