--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 		<meta charset="utf-8" />
 		<link href="css/style.css" rel="stylesheet" /> 
 	</head>
-		<h1>Em memórias de um grande amor.</h1>
+		<h1>Histórias de um grande amor.</h1>
 	
 	<body>
 		<img src="imagem 1.jpg" width="1000" height="700" <br />
@@ -17,6 +17,7 @@
 
 
 	</body>	
+
 
 
 
